crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@62.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(2.0, 3.0, '[]') -|- numrange(3.0, 4.0, '()');"
---
SelectStmt@0..61
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..59
    AExpr@7..59
      FuncCall@7..30
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "2.0"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "3.0"
        Ascii44@24..25 ","
        Whitespace@25..26 " "
        AConst@26..30
          Sconst@26..30 "'[]'"
      Ascii41@30..31 ")"
      Whitespace@31..32 " "
      Op@32..35 "-|-"
      Whitespace@35..36 " "
      FuncCall@36..59
        Ident@36..44 "numrange"
        Ascii40@44..45 "("
        AConst@45..48
          Fconst@45..48 "3.0"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..53
          Fconst@50..53 "4.0"
        Ascii44@53..54 ","
        Whitespace@54..55 " "
        AConst@55..59
          Sconst@55..59 "'()'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

