crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@63.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(1.0, 2.0) -|- numrange(2.0, 3.0,'[]');"
---
SelectStmt@0..54
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      FuncCall@7..24
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "1.0"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "2.0"
      Ascii41@24..25 ")"
      Whitespace@25..26 " "
      Op@26..29 "-|-"
      Whitespace@29..30 " "
      FuncCall@30..52
        Ident@30..38 "numrange"
        Ascii40@38..39 "("
        AConst@39..42
          Fconst@39..42 "2.0"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..47
          Fconst@44..47 "3.0"
        Ascii44@47..48 ","
        AConst@48..52
          Sconst@48..52 "'[]'"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

