crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_adjacent(numrange(2.0, 3.0, '(]'), numrange(1.0, 2.0, '(]'));"
---
SelectStmt@0..74
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    FuncCall@7..71
      Ident@7..21 "range_adjacent"
      Ascii40@21..22 "("
      FuncCall@22..45
        Ident@22..30 "numrange"
        Ascii40@30..31 "("
        AConst@31..34
          Fconst@31..34 "2.0"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        AConst@36..39
          Fconst@36..39 "3.0"
        Ascii44@39..40 ","
        Whitespace@40..41 " "
        AConst@41..45
          Sconst@41..45 "'(]'"
      Ascii41@45..46 ")"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      FuncCall@48..71
        Ident@48..56 "numrange"
        Ascii40@56..57 "("
        AConst@57..60
          Fconst@57..60 "1.0"
        Ascii44@60..61 ","
        Whitespace@61..62 " "
        AConst@62..65
          Fconst@62..65 "2.0"
        Ascii44@65..66 ","
        Whitespace@66..67 " "
        AConst@67..71
          Sconst@67..71 "'(]'"
  Ascii41@71..72 ")"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

