crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(1.1, 3.3) <@ numrange(0.1,10.1);"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      FuncCall@7..24
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "1.1"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "3.3"
      Ascii41@24..25 ")"
      Whitespace@25..26 " "
      Op@26..28 "<@"
      Whitespace@28..29 " "
      FuncCall@29..46
        Ident@29..37 "numrange"
        Ascii40@37..38 "("
        AConst@38..41
          Fconst@38..41 "0.1"
        Ascii44@41..42 ","
        AConst@42..46
          Fconst@42..46 "10.1"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

