crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@66.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(0.1, 10.1) <@ numrange(1.1,3.3);"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      FuncCall@7..25
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "0.1"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..25
          Fconst@21..25 "10.1"
      Ascii41@25..26 ")"
      Whitespace@26..27 " "
      Op@27..29 "<@"
      Whitespace@29..30 " "
      FuncCall@30..46
        Ident@30..38 "numrange"
        Ascii40@38..39 "("
        AConst@39..42
          Fconst@39..42 "1.1"
        Ascii44@42..43 ","
        AConst@43..46
          Fconst@43..46 "3.3"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

