crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(1.1, 2.2,'[]') - numrange(2.0, 3.0);"
---
SelectStmt@0..52
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..50
    AExpr@7..50
      FuncCall@7..29
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "1.1"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "2.2"
        Ascii44@24..25 ","
        AConst@25..29
          Sconst@25..29 "'[]'"
      Ascii41@29..30 ")"
      Whitespace@30..31 " "
      Ascii45@31..32 "-"
      Whitespace@32..33 " "
      FuncCall@33..50
        Ident@33..41 "numrange"
        Ascii40@41..42 "("
        AConst@42..45
          Fconst@42..45 "2.0"
        Ascii44@45..46 ","
        Whitespace@46..47 " "
        AConst@47..50
          Fconst@47..50 "3.0"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

