crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_minus(numrange(10.1,12.2,'[]'), numrange(110.0,120.2,'(]'));"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..18 "range_minus"
      Ascii40@18..19 "("
      FuncCall@19..42
        Ident@19..27 "numrange"
        Ascii40@27..28 "("
        AConst@28..32
          Fconst@28..32 "10.1"
        Ascii44@32..33 ","
        AConst@33..37
          Fconst@33..37 "12.2"
        Ascii44@37..38 ","
        AConst@38..42
          Sconst@38..42 "'[]'"
      Ascii41@42..43 ")"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      FuncCall@45..70
        Ident@45..53 "numrange"
        Ascii40@53..54 "("
        AConst@54..59
          Fconst@54..59 "110.0"
        Ascii44@59..60 ","
        AConst@60..65
          Fconst@60..65 "120.2"
        Ascii44@65..66 ","
        AConst@66..70
          Sconst@66..70 "'(]'"
  Ascii41@70..71 ")"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

