crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(4.5, 5.5, '[]') && numrange(5.5, 6.5);"
---
SelectStmt@0..54
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    AExpr@7..52
      FuncCall@7..30
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "4.5"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "5.5"
        Ascii44@24..25 ","
        Whitespace@25..26 " "
        AConst@26..30
          Sconst@26..30 "'[]'"
      Ascii41@30..31 ")"
      Whitespace@31..32 " "
      Op@32..34 "&&"
      Whitespace@34..35 " "
      FuncCall@35..52
        Ident@35..43 "numrange"
        Ascii40@43..44 "("
        AConst@44..47
          Fconst@44..47 "5.5"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..52
          Fconst@49..52 "6.5"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

